kubernetes/main/apps/networking/traefik/vpn/networkpolicy.yaml
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: traefik-vpn
  namespace: networking
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: traefik
      app.kubernetes.io/instance: traefik-vpn-networking
  ingress:
    - fromEntities:
        - world
        - cluster
      toPorts:
        - ports:
            - port: "8000"
              protocol: TCP
            - port: "8443"
              protocol: TCP
            - port: "8443"
              protocol: UDP
    - fromEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: observability
            app.kubernetes.io/name: prometheus
      toPorts:
        - ports:
            - port: "9100"
              protocol: TCP
  egress:
    - toEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: remote
            app.kubernetes.io/name: filebrowser
      toPorts:
        - ports:
            - port: "7000"
              protocol: TCP
    - toEntities:
        - kube-apiserver
